# full_auth

./: .gitignore  README.md  pyproject.toml  requirements.txt
full_auth/: settings.py  urls.py
users/: models.py  urls.py  views.py
users/migrations/: 0001_initial.py
